Fixed an issues with classification report

--- a/NER_Notebook_Deployed_AWS.ipynb
+++ b/NER_Notebook_Deployed_AWS.ipynb
@@ -361,11 +361,11 @@
     "\n",
     "print('Train Classification Report: ')\n",
     "pred_train = clf.predict(X_train)\n",
-    "print(classification_report(y_train, pred_train, target_names=data['Tag'].unique()))\n",
+    "print(classification_report(y_train, pred_train))\n",
     "\n",
     "print('Test Classification Report: ')\n",
     "pred_test = clf.predict(X_test)\n",
-    "print(classification_report(y_test, pred_test, target_names=data['Tag'].unique()))"
+    "print(classification_report(y_test, pred_test))"
    ]
   },
   {
